--- a/scfront/src/css/header.css
+++ b/scfront/src/css/header.css
@@ -4,9 +4,10 @@ button {
     margin: 0;
     padding: 0;
     width: 100%;
+    border: none;
     height: 100%;
-    /* background: linear-gradient(135deg, #8a2be2, #c993ff); */
-    background-color: aquamarine;
+    background-color: #fff;
+    /* background-color: aquamarine; */
 }
 
 div {
