--- a/scfront/src/css/main.css
+++ b/scfront/src/css/main.css
@@ -4,8 +4,8 @@ html {
     padding: 0;
     width: 100%;
     height: 100%;
-    /* background: linear-gradient(135deg, #8a2be2, #c993ff); */
-    background-color: aquamarine;
+    background: aquamarine;
+    /* background-color: aquamarine; */
 }
 
 div {
